# job_search_capilot

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  eval_parsing.py  main.py  models.py  workflow.py
backend/app/services/: __init__.py  job_research.py  llm.py  parsing_eval.py  pdf_layout.py  resume_parser.py  retrieval.py  scoring.py  text.py
backend/fixtures/resume_parsing/sample_01/: expected.txt  metadata.json  parsed.txt
backend/fixtures/resume_parsing/sample_02/: expected.txt  metadata.json  parsed.txt
backend/tests/: test_job_research.py  test_llm.py  test_parsing_eval.py  test_pdf_layout.py  test_resume_parser.py  test_retrieval.py  test_scoring.py  test_workflow.py
docs/: architecture.md  resume-bullets.md  roadmap.md  system-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
