[project]
name = "job-search-copilot-backend"
version = "0.1.0"
description = "Backend API and agent workflow for the Job Search Copilot portfolio project."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "openai>=1.90.0",
    "langgraph>=0.2.0",
    "llama-index-core>=0.11.0",
    "openai-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
packages = ["app"]
